--- a/Views/Expenses/Create.cshtml
+++ b/Views/Expenses/Create.cshtml
@@ -3,7 +3,10 @@
 <div class="container">
     <h2>Add Expense</h2>
     <form asp-action="Create" method="post">
-
+        <div>
+            <label asp-for="Name" class="form-label"></label>
+            <input asp-for="Name" class="form-control"/>
+        </div>
         <div>
             <label asp-for="Description" class="form-label"></label>
             <input asp-for="Description" class="form-control"/>
